i remade the entire webpage with 3 different media quiries for desktop tablet and mobile

--- a/index.html
+++ b/index.html
@@ -1,10 +1,349 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="stylesheet" href="./css/responsive.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
     <title>Saas company</title>
   </head>
-  <body></body>
+  <body>
+    <section class="top-section">
+      <header>
+        <div class="header-content">
+          <div class="logo">
+            <img alt="logo" src="/assets/logos/logo-front.svg"/>
+          </div>
+          <nav class="navbar">
+            <button class="bars"><i class="fa-solid fa-bars"></i></button>
+            <ul class="ul-nav">
+              <li><a href="">Home</a></li>
+              <li><a href="">Features</a></li>
+              <li><a href="">Learn</a></li>
+              <li><a href="">Pricing</a></li>
+              <li><a href="">Hire Us</a></li>
+            </ul>
+            <button class="buy-now">Buy Now</button>
+          </nav>
+        </div>
+      </header>
+      <div class="content hero-section">
+        <div class="left-hero content-vertical">
+          <div class="title">
+            <h1>Empowering teams with freedom</h1>
+            <p class="">Own the unlimited power of the web development</p>
+          </div>
+          <div class="actions">
+            <button class="play-video">
+              <i class="fa-solid fa-circle-play"></i><span>Play Video</span>
+            </button>
+            <div><a class="learn-more" href="">Learn more</a></div>
+          </div>
+        </div>
+        <div class="right-hero">
+          <div class="img-wrap-1 wrap">
+            <img alt="Google logo" src="/assets/logos/google.png"/>
+          </div>
+          <div class="img-wrap-2 wrap">
+            <img alt="Paypal logo" src="/assets/logos/paypal.jpg"/>
+          </div>
+          <div class="img-wrap-3 wrap">
+            <img alt="Weave logo" src="/assets/logos/weave.png"/>
+          </div>
+          <div class="img-wrap-4 wrap">
+            <img alt="Google Ads logo" src="/assets/logos/google-ads.png"/>
+          </div>
+          <div class="img-wrap-5 wrap">
+            <img alt="Asana logo" src="/assets/logos/asana.png"/>
+          </div>
+          <div class="img-wrap-6 wrap">
+            <img alt="Atlassian logo" src="/assets/logos/atlassian.png"/>
+          </div>
+          <div class="img-wrap-7 wrap">
+            <img alt="Calendar logo" src="/assets/logos/calendar.png"/>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="why-front">
+      <div class="why-front-title">
+        <h2 class="h2">Why Front</h2>
+        <p class="why-sub">
+          Front is an incredibly beautiful, fully responsive , and mobile-first
+          projects on the web - it is the starting point for creative sites
+        </p>
+      </div>
+      <div class="bullet-list">
+        <div class="bullet">
+          <div class="top">
+            <div class="left-wing hidden"></div>
+            <div class="bullet-circle">
+              <div class="bullet-circle-inner"></div>
+            </div>
+            <div class="right-wing"></div>
+          </div>
+          <div class="bottom"><p>Basic elements</p></div>
+        </div>
+        <div class="bullet">
+          <div class="top">
+            <div class="left-wing"></div>
+            <div class="bullet-circle">
+              <div class="bullet-circle-inner"></div>
+            </div>
+            <div class="right-wing"></div>
+          </div>
+          <div class="bottom"><p>Components</p></div>
+        </div>
+        <div class="bullet">
+          <div class="top">
+            <div class="left-wing"></div>
+            <div class="bullet-circle">
+              <div class="bullet-circle-inner"></div>
+            </div>
+            <div class="right-wing"></div>
+          </div>
+          <div class="bottom"><p>Combined components</p></div>
+        </div>
+        <div class="bullet">
+          <div class="top">
+            <div class="left-wing"></div>
+            <div class="bullet-circle">
+              <div class="bullet-circle-inner"></div>
+            </div>
+            <div class="right-wing hidden"></div>
+          </div>
+          <div class="bottom"><p>Page layouts</p></div>
+        </div>
+      </div>
+    </section>
+    <section class="pricing-section">
+      <div class="pricing-title">
+        <h2 class="h2">Pricing</h2>
+        <p class="price-sub">No additional costs. Pay for what you use</p>
+      </div>
+      <div class="plans-features-list">
+        <div class="pricing-table">
+          <div class="plan">
+            <div class="plan-header">
+              <div class="plan-price">
+                <p class="price-59">59<span class="mo">/ mo</span></p>
+              </div>
+              <div class="plan-divider"></div>
+              <p class="start-business">
+                Start your Front business now. 100% guaranteed money back. No
+                questions asked.
+              </p>
+            </div>
+          </div>
+          <div class="plan-footer">
+            <button class="play-video">
+              <i class="fa-solid fa-circle-play"></i><span>Play Video</span></button>
+            <p class="card">No credit card required.</p>
+          </div>
+        </div>
+        <div class="plan-features">
+          <div class="row-1">
+            <div class="plan-feature-item">
+              <div class="item-content">
+                <img alt="Components illustration" src="/assets/images/components.svg"/>
+                <div class="item-title">Hundreds of components</div>
+                <p class="item-details">
+                  Achieve maximum productivity with minimum effort with Front
+                  and create robust Limitless products.
+                </p>
+              </div>
+            </div>
+            <div class="plan-feature-item">
+              <div class="item-content">
+                <img alt="Images included" src="/assets/images/images.svg"/>
+                <div class="item-title">Images included</div>
+                <p class="item-details f14">
+                  Images included We made custom license for all our premium
+                  images in the front
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row-2">
+            <div class="plan-feature-item">
+              <div class="item-content">
+                <img alt="Cancel anytime" src="/assets/images/cancel.svg"/>
+                <div class="item-title cancel">
+                  Cancel anytime <span class="sketch">Sketch</span>
+                </div>
+                <p class="item-details f14">
+                  If its not for you, just cancel, no hidden costs or fees.
+                </p>
+              </div>
+            </div>
+            <div class="plan-feature-item">
+              <div class="item-content">
+                <img alt="Money back guarantee" src="/assets/images/moneyback.svg"/>
+                <div class="item-title">Money back</div>
+                <p class="item-details f14">
+                  100% guaranteed money back. No questions asked.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="hire-us-section">
+      <div class="hire-us-left">
+        <div class="hire-us-top">
+          <div class="hire-us-title">
+            <div class="title"><h2>Hire Us</h2></div>
+          </div>
+          <span class="goal">Whatever your goal - we will get you there</span>
+          <div class="divider"></div>
+          <p class="phrase">
+            “ I love front! I love the ease of use, I love the fact that I have
+            total creative freedom...”
+          </p>
+        </div>
+        <div class="hire-us-bottom">
+          <div class="person">
+            <div>Charlotte Moore</div>
+            <span class="person-role">Head of Commercials, Slack</span>
+          </div>
+          <div class="img-wrap wrap-man">
+            <img alt="Picture of Charlotte Moore" src="/assets/images/man_one.jpg"/>
+          </div>
+        </div>
+      </div>
+      <div class="hire-us-right">
+        <form class="form" action="hire">
+          <div class="form-data">
+            <p class="fill-out sf">
+              Fill out the form and we'll be in touch as soon as possible
+            </p>
+            <div class="form-group sf">
+              <input id="first-name" class="sf" type="text" required placeholder="First name"/>
+              <input id="last-name" class="sf" type="text" required placeholder="Last name"/>
+            </div>
+            <div class="form-group sf">
+              <input id="email" class="sf" type="email" required placeholder="Email"/>
+            </div>
+            <div class="form-group list sf">
+              <input id="Budget" class="sf" type="number" list="numbers" placeholder="Budget"/>
+              <datalist id="numbers" class="sf">
+                <option value="$100"></option>
+                <option value="$200"></option>
+                <option value="$500"></option>
+                <option value="$750"></option>
+                <option value="$1000"></option>
+                <option value="$5000"></option>
+                <option value="+$5000"></option>
+              </datalist>
+              <input id="country" class="sf" type="text" list="country-list" placeholder="Country"/>
+              <datalist id="country-list" class="sf">
+                <option value="United States"></option>
+                <option value="United Kingdom"></option>
+                <option value="Germany"></option>
+                <option value="Japan"></option>
+                <option value="Korea"></option>
+                <option value="Australia"></option>
+                <option value="Other"></option>
+              </datalist>
+            </div>
+            <div class="textarea">
+              <textarea
+                id="more-information" class="sf"
+                placeholder="Tell us more about your project, needs, and timeline, please...">
+              </textarea>
+            </div>
+            <div class="form-group-2">
+              <input id="marketing" type="checkbox"/>
+              <div class="label sf">
+                <label class="sf" for="marketing"></label>
+                <div class="receive sf">
+                  Yes, I'd like to receive occasional marketing emails from
+                  Front. I have the right to opt out at any time.
+                </div>
+                <div class="frame-20">
+                  <span class="privacy-policy-1 pp"><a class="sf" href="">View privacy policy</a></span>
+                  <span class="privacy-policy-2 pp"><a class="sf" href="">View privacy policy</a></span>
+                </div>
+              </div>
+            </div>
+            <button class="submit-form" type="submit">Submit Form</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <footer>
+      <div class="frame-1">
+        <div class="frame-2">
+          <div class="logo">
+            <img alt="Front Logo" src="/assets/logos/logo-front.svg"/>
+          </div>
+          <div class="address">
+            <a href="" class="sf"><i class="fa-solid fa-location-dot sf"></i>153 Williamson Plaza, Maggieberg</a>
+          </div>
+          <div class="phone-number">
+            <a href="" class="sf"><i class="fa-solid fa-phone sf"></i>+1 (062) 109-9222</a>
+          </div>
+        </div>
+        <div class="frame-3">
+          <div class="frame-4">
+            <div class="frame-6">
+              <div class="company">
+                <h3 class="sf">Company</h3>
+                <ul>
+                  <li><a href="" class="sf">About</a></li>
+                  <li>
+                    <a href="" class="sf">Career <span>We're hiring</span></a>
+                  </li>
+                  <li><a href="" class="sf">Blog</a></li>
+                  <li><a href="" class="sf">Customers</a></li>
+                  <li><a href="" class="sf">Hire us</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="frame-7">
+              <div class="features">
+                <h3 class="sf">Features</h3>
+                <ul>
+                  <li><a href="" class="sf">Press</a></li>
+                  <li><a href="" class="sf">Release notes</a></li>
+                  <li><a href="" class="sf">Integrations</a></li>
+                  <li><a href="" class="sf">Pricing</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="frame-5">
+            <div class="frame-8">
+              <div class="documentation">
+                <h3 class="sf">Documentation</h3>
+                <ul>
+                  <li><a href="" class="sf">Support</a></li>
+                  <li><a href="" class="sf">Docs</a></li>
+                  <li><a href="" class="sf">Status</a></li>
+                  <li><a href="" class="sf">API Reference</a></li>
+                  <li><a href="" class="sf">Tech Requirements</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="frame-9">
+              <div class="resources">
+                <h3 class="sf">Resources</h3>
+                <ul>
+                  <li>
+                    <a href=""><i class="fa-solid fa-headphones style sf"></i><span>Help</span></a
+                    >
+                  </li>
+                  <li>
+                    <a href=""><i class="fa-solid fa-user sf"></i><span>Your Account</span></a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
